<resources>
    <string name="app_name">Zorg voor het hart</string>
    <string name="startButton">Nieuwe meting</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_measurement">Meting</string>
    <string name="title_diary">Dagboek</string>
    <string name="title_contact">Contact</string>
    <string name="title_settings">Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Login</string>
    <string name="bovendruk">Bovendruk/SYS(mmHg)</string>
    <string name="onderdruk">Onderdruk/DIA(mmHg)</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Uw e-mailadres is ongeldig</string>
    <string name="error_invalid_password">Uw wachtwoord is te kort</string>
    <string name="error_incorrect_password">Uw wachtwoord is onjuist</string>
    <string name="error_field_required">verplicht veld</string>
    <string name="forgotPasswordText">Weet u uw wachtwoord niet meer?
        Vul hieronder uw e-mailadres in en druk op verzenden. We sturen dan binnen enkele minuten een e-mail waarmee u uw wachtwoord kunt herstellen. </string>
    <string name="title_login_or_register">Inloggen / Registreren</string>
    <string name="account_activated">Account geactiveerd</string>
    <string name="one_account_allowed">Er is maar één account toegestaan</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_stepper">Registreren stap 1 van 2</string>
    <string name="registeredTxt1">
       \n U heeft een e-mail ontvangen op:
    </string>
    <string name="registeredTxt2">
        Klik op de link in de e-mail om uw \naccount activeren.
    </string>
    <!-- Strings related to Service -->
    <string name="settingsLbl">Mijn instellingen</string>
    <string name="accountLbl">Mijn account</string>
    <string name="disclaimerLbl">Disclaimer</string>
    <string name="disclaimerText">
        Deze app is met de grootst mogelijke zorgvuldigheid samengesteld. Wij kunnen
        echter niet garanderen dat de app altijd zonder onderbreking, fouten of gebreken beschikbaar zal zijn
        of werken en dat de verschafte informatie volledig, juist of up-to-date is.
    </string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="tab_title" />
    <string name="go_to_summary" />


    <string name="q1">
        Hoe moet ik mijn bloeddruk meten?
    </string>
    <string name="q2">
        Hoe vaak moet ik mijn bloeddruk meten?
    </string>
    <string name="q3">
        Wat is een 24-uurs bloeddrukmeting?
    </string>
    <string name="q4">
        Moet ik mijn bloeddruk links of rechts meten?
    </string>

    <string name="a1">
        Het meten van de bloeddruk kan op verschillende manieren.
        De meest gangbare methode is het meten met een bloeddrukmeter.
        De klassieke bloeddrukmeter is met een rubberen slang verbonden aan een  \n\n
        dikke band. Die band moet aan de bovenarm verbonden worden. De band wordt
        dan met een pompje opgepompt waardoor de slagaders afgesloten worden.
        Daardoor is ook de polsslag niet meer voelbaar.                  \n
        Als het bloedvat volledig afgesloten is wordt het pompen gestopt.
        De band loopt dan weer langzaam leeg.             \n\n
        Op het moment dat het bloed weer door de aderen loopt (en de polsslag weer gevoeld kan worden) wordt de bovendruk gemeten.
        De band loopt verder leeg en als het bloed weer vrij kan stromen, wordt de onderdruk gemeten.
        Het bloeddruk meten levert dus altijd twee getallen/waarden op.    \n
        Gebruikelijk is dat deze waarden met een streepje ertussen genoteerd worden,
        eerst de bovendruk en dan de onderdruk. Bijvoorbeeld 120-90 of 120/90.
    </string>
    <string name="a2">
        Nadat één keer vastgesteld is dat de bloeddruk te hoog is, is naar medische begrippen nog geen sprake van
        verhoogde bloeddruk (hypertensie). Daarvoor zijn meer metingen nodig.        \n
        In de regel wordt pas gesproken van verhoogde bloeddruk als 3 tot 5 metingen een te hoge bloeddruk uitwijzen.
        Daarbij wordt ook beoordeeld of die metingen onder vergelijkbare omstandigheden uitgevoerd zijn.         \n
        Als de patient nerveus is en niet uitgerust, kan dat de bloeddrukmeting minder betrouwbaar maken.
    </string>
    <string name="a3">
        De bloeddrukmeting kan zowel bij de rechter als de linkerarm gedaan worden. Er kan sprake zijn van klein verschil,
        maar dit zal normaalgesproken nooit meer dan 10 punten zijn. Een hoger verschil kan wijzen op een afwijking,       \n
        bijvoorbeeld het bestaan van vernauwingen in de bloedvaten. In geval van twijfel is het altijd goed een arts te consulteren.\n
        De bloeddruk kan ook in de benen gemeten worden. Daarvoor is dan vaak wel een speciale band nodig die dikker is dan de ‘normale‘ band.
    </string>
    <string name="a4">
       Een methode die regelmatig bij patienten wordt gehanteerd is de 24-uurs bloeddrukmeting.
        In korte tijd kan een arts dan zien hoe de ontwikkeling van de bloeddruk is.       \n
        De meting van de bloeddruk op deze manier wordt gedaan met een apparaat dat vrijwel identiek is
        aan een gewone bloeddrukmeter. Aan dit apparaat is alleen een regelaar toegevoegd die periodiek \n
        (bijvoorbeeld elke 10 minuten) de bloeddruk opmeet en deze registreert. Daarnaast heeft een 24-uurs
        bloeddrukmeter uiteraard een pompje op batterijen zodat de meting volledig automatisch verloopt.\n
        De huisarts heeft met deze metingen een nauwkeurig beeld van de bloeddruk en het verloop.
    </string>
    <string name="contactPageTxt">Heeft u vragen of wilt u een afspraak maken? Dan kunt u via dit formulier een bericht sturen naar uw consulent. In geval van spoed kunt u het beste telefonisch contact opnemen met uw ziekenhuis of 112 bellen.</string>


    <!-- Measurement -->
    <string name="popupText">Voordat u verder kunt gaan hebben wij nog enkele gegevens van u nodig zodat we u beter kunnen assisteren. Namelijk:</string>
    <string name="length">Lengte (cm)</string>
    <string name="weight">Gewicht (kg)</string>
    <string name="fillInText">Vul uw bloeddruk in</string>
    <string name="fillInText2">Gezondheidsklachten</string>
    <string name="none">Nee</string>
    <string name="yesNamely">Ja, namelijk</string>
    <string name="shortOfBreath">Kortademigheid</string>
    <string name="wheezing">Piep op de borst</string>
    <string name="hardToBreathe">Benauwdheid</string>
    <string name="heartPounding">Hartkloppingen</string>
    <string name="irregularHeartbeat">Onregelmatige hartslag</string>
    <string name="heartSkipping">Overslaan van het hart</string>
    <string name="otherNamely">Anders, namelijk:</string>
    <string name="extraRemarks">Extra / opmerkingen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Settings -->
    <string name="biggerText">biggerText</string>
    <string name="dailyReminders">dailyReminders</string>
    <string name="sendMeasurementsWeekly">sendMeasurementsWeekly</string>
    <string name="editLengthWeight">editLengthWeight</string>
    <string name="autoLogin">autoLogin</string>
    <string name="logout">logout</string>


    <!-- Error messages -->
    <string name="noInternetConnection">Geen internet verbinding</string>

    <string name="toolTipRegister">Wij hebben een aantal gegevens van u nodig zodat wij u beter kunnen assisteren</string>

</resources>
