<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="charmelinetiel.android_tablet_zvg.fragments.MessageSentFragment">

    <TextView
        android:id="@+id/popup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/popupText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/popup_text"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2" >

            <TextView
                android:id="@+id/length_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:layout_gravity="center_horizontal"
                />


            <EditText
                android:id="@+id/length_input"
                android:width="@dimen/formFieldSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lighterGrey"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="@dimen/normalText"
                android:textColor="@color/lightGrey" />

            <Button
                android:id="@+id/cancel_measurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:width="@dimen/buttonM"
                android:background="@color/lightGrey"
                android:padding="@dimen/margin"
                android:text="Annuleren"
                android:textAllCaps="false"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/biggerText" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/weight_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/weight_input"
                android:width="@dimen/formFieldSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lighterGrey"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="@dimen/normalText"
                android:textColor="@color/lightGrey" />

            <Button
                android:id="@+id/save_length_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:width="@dimen/buttonM"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:padding="@dimen/margin"
                android:text="Volgende"
                android:textAllCaps="false"
                android:textColor="@color/whiteText"
                android:textSize="@dimen/biggerText" />
        </LinearLayout>

    </LinearLayout>






</RelativeLayout>
