<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/measurementStep2"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/IssuesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/padding_10"
        android:textSize="@dimen/bigger_text_mobile"
        android:text="Heeft u regelmatig last van een of meer van de volgende gezondheidsklachten? "
        />

    <TextView
        android:id="@+id/dateTimeNow"
        android:layout_below="@+id/IssuesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        />

    <RadioGroup
        android:id="@+id/measurementRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTimeNow"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yesNamelyRadio"
            android:buttonTint="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fillInText"
            android:layout_toRightOf="@id/noneRadio"
            android:text="@string/yesNamely"/>

        <RadioButton
            android:id="@+id/noneRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fillInText"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/none"/>
    </RadioGroup>

    <ListView
        android:id="@+id/checkboxList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/measurementRadioGroup">
    </ListView>

    <CheckBox
        android:id="@+id/otherNamelyCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anders, namelijk"
        android:layout_below="@id/checkboxList"/>

    <TextView
        android:id="@+id/otherNamely"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/otherNamely"
        android:layout_below="@id/checkboxList"/>

    <EditText
        android:id="@+id/otherNamelyInput"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/lighterGrey"
        android:layout_below="@id/otherNamely"/>

    <TextView
        android:id="@+id/noIssues"
        android:visibility="gone"
        android:layout_below="@+id/otherNamelyInput"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_marginLeft="@dimen/padding_10"
        android:text="Geen bijzondere klachten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/cancel_measurement2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noIssues"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:width="@dimen/button_mobile"
        android:background="@color/lightGrey"
        android:text="Terug"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/bigger_text_mobile" />

    <Button
        android:id="@+id/to_measurement_step3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_measurement2_button"
        android:layout_alignBottom="@+id/cancel_measurement2_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/cancel_measurement2_button"
        android:width="@dimen/button_mobile"
        android:background="@color/colorAccent"
        android:text="Volgende"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/bigger_text_mobile" />

</RelativeLayout>
</ScrollView>