<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/measurementStep1">


    <TextView
        android:id="@+id/fillInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/bigger_text_mobile"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_marginLeft="20dp"
        android:text="@string/fillInText"
        />
    <TextView
        android:id="@+id/dateTimeNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fillInText"
        android:layout_marginLeft="20dp"
        android:textColor="@color/lightGrey"
        />
    <TextView
        android:id="@+id/bovendruk_text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fillInText"
        android:layout_alignStart="@id/upperBloodPressure"
        android:layout_alignTop="@id/bovendruk_image"
        android:text="@string/bovendruk"
        />

    <TextView
        android:id="@+id/onderdruk_text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upperBloodPressure"
        android:layout_alignStart="@id/upperBloodPressure"
        android:layout_alignTop="@id/onderdruk_image"
        android:text="@string/onderdruk"
        />

    <ImageView
        android:id="@+id/bovendruk_image"
        android:layout_margin="20dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_below="@+id/dateTimeNow"
        android:src="@drawable/meting_img1"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/upperBloodPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bovendruk_text"
        android:layout_toEndOf="@+id/bovendruk_image"
        android:width="150dp"
        android:background="@color/lighterGrey"
        android:hint="0"
        android:inputType="number"
        android:padding="@dimen/padding_10"
        android:textAlignment="center"
        android:textColor="@color/lightGrey"
        android:textSize="@dimen/normal_text_mobile" />


    <ImageView
        android:id="@+id/onderdruk_image"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_below="@+id/bovendruk_image"
        android:src="@drawable/meting_img2" />

    <EditText
        android:id="@+id/lowerBloodPressure"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lighterGrey"
        android:layout_marginRight="@dimen/margin_15"
        android:padding="@dimen/padding_10"
        android:hint="0"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="@dimen/normal_text_mobile"
        android:textColor="@color/lightGrey"
        android:layout_below="@id/onderdruk_text"
        android:layout_toRightOf="@id/onderdruk_image"/>

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/onderdruk_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/cancel_measurement1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/button_mobile"
        android:background="@color/lightGrey"
        android:text="Annuleren"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/bigger_text_mobile" />

    <Button
        android:id="@+id/complete_measurement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_measurement1_button"
        android:layout_alignBottom="@+id/cancel_measurement1_button"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@id/cancel_measurement1_button"
        android:layout_marginLeft="10dp"
        android:width="@dimen/button_mobile"
        android:background="@color/colorAccent"
        android:text="Volgende"
        android:textAllCaps="false"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/bigger_text_mobile" />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>